Added some basic events
Also, added some debugg classes, wich i reused from an older project. I
need to add them to the game class though.

--- a/Testing/Testing/Testing.csproj
+++ b/Testing/Testing/Testing.csproj
@@ -107,6 +107,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Debugging\DebuggConsole.cs" />
+    <Compile Include="Debugging\DebuggVariable.cs" />
     <Compile Include="Objects\RedObject.cs" />
     <Compile Include="Objects\BlueObjects.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
