Implemented fixed moving
Also added mouse over event

--- a/Sandi's_Way/Sandi_s_Way.csproj
+++ b/Sandi's_Way/Sandi_s_Way.csproj
@@ -94,6 +94,7 @@
   <ItemGroup>
     <Compile Include="Actions.cs" />
     <Compile Include="Alarm.cs" />
+    <Compile Include="DirectionEnum.cs" />
     <Compile Include="GameInfo.cs" />
     <Compile Include="GameObject.cs" />
     <Compile Include="ObjectManager.cs" />
