Added mouseClick (for testing) and solidnes
Mouse click detector is just an object which tracks mouse clicks and
does stuff with them. It will be used for testing actions.
Solidnes is a property of objects. If it is true, objects can be in
collisions. If its false, the ObjectManager won't check collisions with
them.

Smaller changes:
- added an empty texture to TextureContainer
- added an initializer forTextureContainer
- made small dot do its job, now with the new actions

--- a/Testing/Testing/Testing.csproj
+++ b/Testing/Testing/Testing.csproj
@@ -108,6 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Objects\Cross.cs" />
+    <Compile Include="Objects\MouseClick.cs" />
     <Compile Include="Objects\RotatingCross.cs" />
     <Compile Include="Objects\SmallDot.cs" />
     <Compile Include="Objects\RedObject.cs" />
