--- a/Sandi's_Way/Sandi_s_Way.csproj
+++ b/Sandi's_Way/Sandi_s_Way.csproj
@@ -94,6 +94,7 @@
   <ItemGroup>
     <Compile Include="Alarm.cs" />
     <Compile Include="Directions.cs" />
+    <Compile Include="TileObjectCreator.cs" />
     <Compile Include="GameInfo.cs" />
     <Compile Include="GameObject.cs" />
     <Compile Include="ObjectManager.cs" />
